# pdfium

./: .clang-format  .gitattributes  .gitignore  .gn  .vpython  .vpython3  AUTHORS  BUILD.gn  CMakeLists.txt  CONTRIBUTING.md  DEPS  DIR_METADATA  OWNERS  PRESUBMIT.py  PRESUBMIT_test.py  PRESUBMIT_test_mocks.py  README.md  codereview.settings  commit-queue.cfg  cr-buildbucket.cfg  luci-milo.cfg  luci-scheduler.cfg  main.star  navbar.md  pdfium.gni  pdfium.gyp  pdfium_unsafe_buffers_paths.txt  project.cfg  tricium-prod.cfg  unsafe_buffers_paths.txt  xfa.gyp
build_overrides/: BUILDCONFIG.gn  build.gni  gtest.gni  partition_alloc.gni  pdfium.gni  v8.gni
build_overrides/compiler/: BUILD.gn
constants/: BUILD.gn  access_permissions.h  annotation_common.cpp  annotation_common.h  annotation_flags.h  appearance.cpp  appearance.h  ascii.h  font_encodings.cpp  font_encodings.h  form_fields.cpp  form_fields.h  form_flags.h  page_object.cpp  page_object.h  stream_dict_common.cpp  stream_dict_common.h  transparency.cpp  transparency.h
core/fpdfapi/: BUILD.gn  cpdf_modulemgr.cpp  cpdf_modulemgr.h  cpdf_pagerendercontext.cpp  fpdf_basic_module.cpp  ipdf_pagemodule.h  ipdf_rendermodule.h
core/fpdfdoc/: BUILD.gn  cba_fontmap.cpp  cba_fontmap.h  cline.cpp  cline.h  cpdf_aaction.cpp  cpdf_aaction.h  cpdf_action.cpp  cpdf_action.h  cpdf_action_unittest.cpp  cpdf_actionfields.cpp  cpdf_actionfields.h  cpdf_annot.cpp  cpdf_annot.h  cpdf_annot_unittest.cpp  cpdf_annotlist.cpp  cpdf_annotlist.h  cpdf_annotlist_unittest.cpp  cpdf_apsettings.cpp  cpdf_apsettings.h  cpdf_bafontmap.cpp  cpdf_bafontmap.h  cpdf_bafontmap_unittest.cpp  cpdf_bookmark.cpp  cpdf_bookmark.h  cpdf_bookmarktree.cpp  cpdf_bookmarktree.h  cpdf_color_utils.cpp  cpdf_color_utils.h  cpdf_defaultappearance.cpp  cpdf_defaultappearance.h  cpdf_defaultappearance_unittest.cpp  cpdf_dest.cpp  cpdf_dest.h  cpdf_dest_unittest.cpp  cpdf_docjsactions.cpp  cpdf_docjsactions.h  cpdf_filespec.cpp  cpdf_filespec.h  cpdf_filespec_unittest.cpp  (+97 more)
core/fxcrt/: BUILD.gn  DEPS  autonuller.h  autonuller_unittest.cpp  autorestorer.h  autorestorer_unittest.cpp  binary_buffer.cpp  binary_buffer.h  binary_buffer_unittest.cpp  byteorder.h  byteorder_unittest.cpp  bytestring.cpp  bytestring.h  bytestring_unittest.cpp  cfx_autorestorer.h  cfx_binarybuf.cpp  cfx_binarybuf.h  cfx_bitstream.cpp  cfx_bitstream.h  cfx_bitstream_unittest.cpp  cfx_blockbuffer.cpp  cfx_blockbuffer.h  cfx_bytestring.cpp  cfx_bytestring.h  cfx_bytestring_unittest.cpp  cfx_char.cpp  cfx_char.h  cfx_chariter.cpp  cfx_chariter.h  cfx_checksumcontext.cpp  cfx_checksumcontext.h  cfx_count_ref.h  cfx_count_ref_unittest.cpp  cfx_crtfileaccess.cpp  cfx_crtfileaccess.h  cfx_datetime.cpp  cfx_datetime.h  cfx_datetime_unittest.cpp  cfx_decimal.cpp  cfx_decimal.h  (+222 more)
fpdfsdk/: BUILD.gn  DEPS  PRESUBMIT.py  cba_annotiterator.cpp  cba_annotiterator.h  cba_annotiterator_embeddertest.cpp  cfx_systemhandler.cpp  cfx_systemhandler.h  cpdf_annotcontext.cpp  cpdf_annotcontext.h  cpdfdoc_environment.cpp  cpdfsdk_actionhandler.cpp  cpdfsdk_actionhandler.h  cpdfsdk_annot.cpp  cpdfsdk_annot.h  cpdfsdk_annothandlermgr.cpp  cpdfsdk_annothandlermgr.h  cpdfsdk_annotiteration.cpp  cpdfsdk_annotiteration.h  cpdfsdk_annotiterator.cpp  cpdfsdk_annotiterator.h  cpdfsdk_annotiterator_embeddertest.cpp  cpdfsdk_appstream.cpp  cpdfsdk_appstream.h  cpdfsdk_baannot.cpp  cpdfsdk_baannot.h  cpdfsdk_baannot_embeddertest.cpp  cpdfsdk_baannothandler.cpp  cpdfsdk_baannothandler.h  cpdfsdk_baannothandler_embeddertest.cpp  cpdfsdk_bfannothandler.cpp  cpdfsdk_customaccess.cpp  cpdfsdk_customaccess.h  cpdfsdk_datetime.cpp  cpdfsdk_datetime.h  cpdfsdk_document.cpp  cpdfsdk_document.h  cpdfsdk_environment.cpp  cpdfsdk_environment.h  cpdfsdk_fieldaction.h  (+127 more)
fpdfsdk/formfiller/: BUILD.gn  DEPS  FFL_CBA_Fontmap.cpp  FFL_CheckBox.cpp  FFL_ComboBox.cpp  FFL_FormFiller.cpp  FFL_IFormFiller.cpp  FFL_PushButton.cpp  cba_fontmap.cpp  cba_fontmap.h  cffl_button.cpp  cffl_button.h  cffl_checkbox.cpp  cffl_checkbox.h  cffl_combobox.cpp  cffl_combobox.h  cffl_combobox_embeddertest.cpp  cffl_fieldaction.cpp  cffl_fieldaction.h  cffl_formfield.cpp  cffl_formfield.h  cffl_formfiller.cpp  cffl_formfiller.h  cffl_iformfiller.cpp  cffl_iformfiller.h  cffl_interactiveformfiller.cpp  cffl_interactiveformfiller.h  cffl_listbox.cpp  cffl_listbox.h  cffl_perwindowdata.cpp  cffl_perwindowdata.h  cffl_privatedata.cpp  cffl_privatedata.h  cffl_pushbutton.cpp  cffl_pushbutton.h  cffl_radiobutton.cpp  cffl_radiobutton.h  cffl_textfield.cpp  cffl_textfield.h  cffl_textobject.cpp  (+1 more)
fpdfsdk/fpdfxfa/: BUILD.gn  DEPS  cpdfxfa_app.cpp  cpdfxfa_app.h  cpdfxfa_context.cpp  cpdfxfa_context.h  cpdfxfa_context_embeddertest.cpp  cpdfxfa_docenvironment.cpp  cpdfxfa_docenvironment.h  (+19 more)
samples/: BUILD.gn  DEPS  image_diff.cc  image_diff_png.cc  image_diff_png.h  pdfium_test.cc  pdfium_test_dump_helper.cc  pdfium_test_dump_helper.h  pdfium_test_event_helper.cc  pdfium_test_event_helper.h  pdfium_test_write_helper.cc  pdfium_test_write_helper.h  samples.gyp  simple_no_v8.c  simple_with_v8.cc
skia/: BUILD.gn  OWNERS  features.gni  skia_common.gypi  skia_gn_files.gypi  skia_library.gypi  skia_pdfium.gypi
testing/: BUILD.gn  DEPS  SUPPRESSIONS  SUPPRESSIONS_EXACT_MATCHING  SUPPRESSIONS_IMAGE_DIFF  SUPPRESSIONS_PIXEL  SUPPRESSIONS_linux  SUPPRESSIONS_mac  SUPPRESSIONS_win  allocator_shim_config.cpp  allocator_shim_config.h  basic_embeddertest.cpp  command_line_helpers.cpp  command_line_helpers.h  embedder_test.cpp  embedder_test.h  embedder_test_constants.cpp  embedder_test_constants.h  embedder_test_environment.cpp  embedder_test_environment.h  embedder_test_main.cpp  embedder_test_mock_delegate.h  embedder_test_timer_handling_delegate.h  external_engine_embedder_test.cpp  external_engine_embedder_test.h  fake_file_access.cpp  fake_file_access.h  font_renamer.cpp  font_renamer.h  free_deleter.h  fx_string_testhelpers.cpp  fx_string_testhelpers.h  fxgc_unittest.cpp  fxgc_unittest.h  fxv8_unittest.cpp  fxv8_unittest.h  gced_embeddertest.cpp  gced_embeddertest.h  gmock.gyp  gtest.gyp  (+39 more)
(+7605 files in other folders)
