# Copyright 2016 The PDFium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

buildconfig = "//build/config/BUILDCONFIG.gn"

# The python interpreter to use by default. On Windows, this will look
# for python3.exe and python3.bat.
script_executable = "python3"

default_args = {
  # Use a production-performant allocator.
  # TODO(tsepez): `enable_pkeys` is a workaround for a partition-alloc build
  # issue and should be removed.
  partition_alloc_is_debug = false
  enable_pkeys = false

  # PDFs only need to run JavaScript.
  v8_enable_webassembly = false

  # Turns on compiler optimizations in V8 in Debug build.
  v8_optimized_debug = true

  # PDFium is currently incompatible with the V8 Sandbox.
  # See https://crbug.com/v8/13014 for details.
  v8_enable_sandbox = false

  # Suppress V8_DEPRECATE_SOON warnings to match the chromium build
  # (at the moment). This is why chromium builds including pdfium
  # currently build against the latest V8, but standalone builds
  # give warnings.
  v8_imminent_deprecation_warnings = false

  # PDFium does not include the temporal_rs library.
  v8_enable_temporal_support = false

  # PDFium has its own unsafe-buffers enforcement directories.
  clang_unsafe_buffers_paths = "//unsafe_buffers_paths.txt"

  # Needed only for std::atomic_ref<T> for large Ts.
  # See https://crbug.com/402171653 for details.
  use_llvm_libatomic = false

  # PDFium bots only have 14.x. Override Chromium's 15.x requirement.
  mac_sdk_min = "14"
}

no_check_targets = [
  # See https://crbug.com/v8/7330 and/or check if these entries exist in
  # Chromium's //.gn file.
  "//v8:cppgc_base",
  "//v8:v8_internal_headers",
  "//v8/src/inspector:inspector",
  "//v8/test/cctest:cctest_sources",
  "//v8/test/unittests:inspector_unittests_sources",
]
